# OpenViatica

./: .gitignore  LICENSE  OpenViatica.py  README.md  config_min.toml  main.py  mypy.ini  pyproject.toml  requirements.txt
Docs/: Configs Dev Standard.md  General Dev Standards.md
Workspaces/: README.md
app/: build.py
app/Custom_Types/: Custom_Types.py  Enums.py  Typed_Dicts.py  __init__.py  type_helper.py
app/Data/: README.md
app/Database_Models/: Principals.py  __init__.py
app/Database_Models/App_Models/: __init__.py  workspaces.py
app/Docs/: General Dev Standards.md
app/Utilities/: Config.py  Setup.py  Sqla_Helper.py  __init__.py  config.py  setup.py  sqla_helper.py  type_helper.py  workspace.py
app/Utilities/Custom_Types/: Enums.py  Typed_Dicts.py  __init__.py
app/Utilities/Database_Helpers/: __init__.py  principals_helper.py  workspaces_helper.py
app/Workspace_Files/: README.md
app/Workspace_Files/Template_Workspace/: README.md
app/Workspace_Files/Template_Workspace/Internal/: README.md
app/Workspace_Files/Template_Workspace/Internal/Config/: workspace_base_pip_requirements.txt
app/Workspace_Files/Template_Workspace/Internal/Secrets/: README.md
app/Workspace_Files/Template_Workspace/System/Clusters/: README.md
app/Workspace_Files/Template_Workspace/System/Config/: README.md
app/Workspace_Files/Template_Workspace/System/Config/setup_workspace/: custom_types.py  pyproject.toml  setup.py
app/Workspace_Files/Template_Workspace/System/Data/: README.md
app/Workspace_Files/Template_Workspace/System/Logs/: README.md
app/Workspace_Files/Template_Workspace/System/Temp/: README.md
app/Workspace_Files/Template_Workspace/System/Utilities/: README.md
app/Workspace_Files/Template_Workspace/System/Utilities/via_utils/: README.md  pyproject.toml
app/Workspace_Files/Template_Workspace/System/Utilities/via_utils/via_utils/: __init__.py  cli.py  core.py
app/Workspace_Files/Template_Workspace/Work/: README.md
app/Workspace_Files/Template_Workspace/Work/Data/Databases/: README.md
app/Workspace_Files/Template_Workspace/Work/Data/File_Storage/: README.md
app/Workspace_Files/Template_Workspace/Work/Data/temp/: README.md
app/Workspace_Files/Template_Workspace/Work/Workflows/: README.md
app/Workspace_Files/Template_Workspace/Work/Workspace/: README.md
app/Workspace_Files/Template_Workspace/Work/Workspace/Users/: README.md
app/api/: README.md
app/config/: config.toml
app/globals/: __init__.py  _globals.py
app/secrets/: README.md
