[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenViatica"
version = "0.0.1"
description = "A data analysis framework from personal use to enterprise level"
authors = [
    { name = "Francisco J. Torres Cardona", email = "ftorres7382@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.16.1",
    # "poetry>=2.1.3",
    "SQLAlchemy>=2.0.41",
    "pydantic>=2.11.7",
    "toml>=0.10.2",
    "email_validator>=2.2.0",

    # mypy specific dependencies
    "types-toml >= 0.10.8.20240310"
]
[tool.poetry]
package-mode = false

