# This pyproject is meant to live in the user directory, but a copy will always be retained in this folder
[tool.poetry]
package-mode = false  # 👈 disables packaging behavior


[tool.poetry.dependencies]
# Custom dependencies
via_utils = {path="../System/Utilities/via_utils/", develop=true}

python = ">=3.12"
pandas = "^2.3.0"
numpy = "^2.3.1"
polars = "^1.31.0"
duckdb = "^1.3.1"
ibis = "^3.3.0"
matplotlib = "^3.10.3"
plotly = "^6.2.0"
dash = "^3.1.0"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
notebook = "^7.4.3"
sqlalchemy = "^2.0.41"
ipython = "^9.3.0"
fastapi = "^0.115.14"
flask = "^3.1.1"
ipykernel = "^6.29.5"
jupytext = "^1.17.2"
pyarrow = "^20.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"